--- a/package/package.json
+++ b/package/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "nodemon": "^2.0.15",
     "sass": "^1.50.1"
-  }
+  },
+    "dependencies": {
+      "@splidejs/splide": "^4.0.1"
+    }
 }
